# passwordle-backend

./: .env.sample  .gitlab-ci.yml  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: config.rs  error.rs  game.rs  lib.rs  main.rs
