[package]
name = "passwordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.4.8"
base64 = "0.13.0"
clap = { version = "3.1.6", features = ["derive", "env"] }
dotenv = "0.15.0"
hyper = { version = "0.14.18", features = ["full"] }
md-5 = "0.10.1"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
uuid = { version = "0.8", features = ["v4", "serde"] }
